[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/bedroomPage.gd" type="Script" id=1]
[ext_resource path="res://tiles/menus_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://gui/styles/theme_main.tres" type="Theme" id=3]
[ext_resource path="res://menus/buttons/button_back.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 27, 0, 5, 27, 0, 10, 27, 0, 12, 13, 0, 13, 15, 0, 15, 27, 0, 262144, 27, 0, 262149, 27, 0, 262154, 27, 0, 262159, 27, 0, 327687, 14, 0, 524288, 27, 0, 524293, 27, 0, 524298, 27, 0, 524303, 27, 0, 589824, 73, 0, 655360, 73, 0, 720896, 73, 0, 786432, 27, 0, 786437, 27, 0, 786442, 27, 0, 786447, 27, 0, 851968, 73, 0, 851984, 73, 0, 917504, 73, 0, 917520, 73, 0, 983040, 73, 0, 983056, 73, 0, 1048576, 27, 0, 1048577, 73, 0, 1048578, 73, 0, 1048579, 73, 0, 1048581, 27, 0, 1048586, 27, 0, 1048587, 73, 0, 1048588, 73, 0, 1048589, 73, 0, 1048590, 73, 0, 1048591, 27, 0, 1048592, 73, 0, 1114112, 73, 0, 1114113, 73, 0, 1114114, 73, 0, 1114115, 73, 0, 1114116, 73, 0, 1114117, 73, 0, 1114118, 73, 0, 1114119, 73, 0, 1114120, 73, 0, 1114121, 73, 0, 1114122, 73, 0, 1114123, 73, 0, 1114124, 73, 0, 1114125, 73, 0, 1114126, 73, 0, 1114127, 73, 0, 1114128, 73, 0, 1179648, 73, 0, 1179649, 73, 0, 1179650, 73, 0, 1179651, 73, 0, 1179652, 73, 0, 1179653, 73, 0, 1179654, 73, 0, 1179655, 73, 0, 1179656, 73, 0, 1179657, 73, 0, 1179658, 73, 0, 1179659, 73, 0, 1179660, 73, 0, 1179661, 73, 0, 1179662, 73, 0, 1179663, 73, 0, 1179664, 73, 0, 1245184, 73, 0, 1245185, 73, 0, 1245186, 73, 0, 1245187, 73, 0, 1245188, 73, 0, 1245189, 73, 0, 1245190, 73, 0, 1245191, 73, 0, 1245192, 73, 0, 1245193, 73, 0, 1245194, 73, 0, 1245195, 73, 0, 1245196, 73, 0, 1245197, 73, 0, 1245198, 73, 0, 1245199, 73, 0, 1245200, 73, 0, 1310720, 27, 0, 1310721, 73, 0, 1310722, 73, 0, 1310723, 73, 0, 1310724, 73, 0, 1310725, 27, 0, 1310726, 73, 0, 1310727, 73, 0, 1310728, 73, 0, 1310729, 73, 0, 1310730, 27, 0, 1310731, 73, 0, 1310732, 73, 0, 1310733, 73, 0, 1310734, 73, 0, 1310735, 27, 0, 1310736, 73, 0, 1376256, 73, 0, 1376257, 73, 0, 1376258, 73, 0, 1376259, 73, 0, 1376260, 73, 0, 1376261, 73, 0, 1376262, 73, 0, 1376263, 73, 0, 1376264, 73, 0, 1376265, 73, 0, 1376266, 73, 0, 1376267, 73, 0, 1376268, 73, 0, 1376269, 73, 0, 1376270, 73, 0, 1376271, 73, 0, 1376272, 73, 0, 1441792, 73, 0, 1441793, 73, 0, 1441794, 73, 0, 1441795, 73, 0, 1441796, 73, 0, 1441797, 73, 0, 1441798, 73, 0, 1441799, 73, 0, 1441800, 73, 0, 1441801, 73, 0, 1441802, 73, 0, 1441803, 73, 0, 1441804, 73, 0, 1441805, 73, 0, 1441806, 73, 0, 1441807, 73, 0, 1441808, 73, 0, 1507328, 73, 0, 1507329, 73, 0, 1507330, 73, 0, 1507331, 73, 0, 1507332, 73, 0, 1507333, 73, 0, 1507334, 73, 0, 1507335, 73, 0, 1507336, 73, 0, 1507337, 73, 0, 1507338, 73, 0, 1507339, 73, 0, 1507340, 73, 0, 1507341, 73, 0, 1507342, 73, 0, 1507343, 73, 0, 1507344, 73, 0, 1572864, 27, 0, 1572865, 73, 0, 1572866, 73, 0, 1572867, 73, 0, 1572868, 73, 0, 1572869, 27, 0, 1572870, 73, 0, 1572871, 73, 0, 1572872, 73, 0, 1572873, 73, 0, 1572874, 27, 0, 1572875, 73, 0, 1572876, 73, 0, 1572877, 73, 0, 1572878, 73, 0, 1572879, 27, 0, 1572880, 73, 0, 1638400, 73, 0, 1638401, 73, 0, 1638402, 73, 0, 1638403, 73, 0, 1638404, 73, 0, 1638405, 73, 0, 1638406, 73, 0, 1638407, 73, 0, 1638408, 73, 0, 1638409, 73, 0, 1638410, 73, 0, 1638411, 73, 0, 1638412, 73, 0, 1638413, 73, 0, 1638414, 73, 0, 1638415, 73, 0, 1638416, 73, 0, 1703936, 73, 0, 1703937, 73, 0, 1703938, 73, 0, 1703939, 73, 0, 1703940, 73, 0, 1703941, 73, 0, 1703942, 73, 0, 1703943, 73, 0, 1703944, 73, 0, 1703945, 73, 0, 1703946, 73, 0, 1703947, 73, 0, 1703948, 73, 0, 1703949, 73, 0, 1703950, 73, 0, 1703951, 73, 0, 1703952, 73, 0, 1769472, 73, 0, 1769473, 73, 0, 1769474, 73, 0, 1769475, 73, 0, 1769476, 73, 0, 1769477, 73, 0, 1769478, 73, 0, 1769479, 73, 0, 1769480, 73, 0, 1769481, 73, 0, 1769482, 73, 0, 1769483, 73, 0, 1769484, 73, 0, 1769485, 73, 0, 1769486, 73, 0, 1769487, 73, 0, 1769488, 73, 0, 1835008, 27, 0, 1835009, 73, 0, 1835010, 73, 0, 1835011, 73, 0, 1835012, 73, 0, 1835013, 27, 0, 1835014, 73, 0, 1835015, 73, 0, 1835016, 73, 0, 1835017, 73, 0, 1835018, 27, 0, 1835019, 73, 0, 1835020, 73, 0, 1835021, 73, 0, 1835022, 73, 0, 1835023, 27, 0, 1835024, 73, 0, 1900544, 73, 0, 1900545, 73, 0, 1900546, 73, 0, 1900547, 73, 0, 1900548, 73, 0, 1900549, 73, 0, 1900550, 73, 0, 1900551, 73, 0, 1900552, 73, 0, 1900553, 73, 0, 1900554, 73, 0, 1900555, 73, 0, 1900556, 73, 0, 1900557, 73, 0, 1900558, 73, 0, 1900559, 73, 0, 1900560, 73, 0 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 540.0
margin_bottom = 842.0
rect_min_size = Vector2( 540, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_top = 249.0
margin_right = 540.0
margin_bottom = 593.0
custom_constants/separation = 24
alignment = 1

[node name="topbumper" type="Container" parent="CenterContainer/VBoxContainer"]
margin_right = 540.0
margin_bottom = 6.0
rect_min_size = Vector2( 540, 6 )

[node name="HBox_Hero" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 540.0
margin_bottom = 44.0
theme = ExtResource( 3 )
alignment = 1

[node name="Container" type="Container" parent="CenterContainer/VBoxContainer/HBox_Hero"]
margin_left = 113.0
margin_right = 183.0
margin_bottom = 14.0
rect_min_size = Vector2( 70, 0 )

[node name="VBox_Center" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBox_Hero"]
margin_left = 187.0
margin_right = 427.0
margin_bottom = 14.0
rect_min_size = Vector2( 240, 0 )
custom_constants/separation = 6

[node name="field_bedroomName" type="Label" parent="CenterContainer/VBoxContainer/HBox_Hero/VBox_Center"]
margin_right = 240.0
margin_bottom = 14.0
text = "### BEDROOM NAME HERE ######"
align = 1

[node name="label_Enhancements" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 540.0
margin_bottom = 82.0
text = "Enhancements"
align = 1

[node name="centerContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 540.0
margin_bottom = 306.0
rect_min_size = Vector2( 480, 200 )

[node name="grid" type="GridContainer" parent="CenterContainer/VBoxContainer/centerContainer"]
margin_left = 270.0
margin_top = 100.0
margin_right = 270.0
margin_bottom = 100.0
custom_constants/vseparation = 24
custom_constants/hseparation = 24
columns = 4

[node name="label_attributes" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 540.0
margin_bottom = 344.0
text = "Attributes"
align = 1

[node name="button_back" parent="." instance=ExtResource( 4 )]
[connection signal="pressed" from="button_back" to="." method="_on_button_back_pressed"]
